knative-separate-mesh/config/knative-eventing/200-allow-api-server-access-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eventing-webhook
  namespace: knative-eventing
  labels:
    app: eventing-webhook
spec:
  podSelector:
    matchLabels:
      app: eventing-webhook
  ingress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-webhook-eventing
  namespace: knative-eventing
  labels:
    app: kafka-webhook-eventing
spec:
  podSelector:
    matchLabels:
      app: kafka-webhook-eventing
  ingress:
    - {}
